--- a/MovieHubFrontend/src/app/components/navbar/navbar.component.html
+++ b/MovieHubFrontend/src/app/components/navbar/navbar.component.html
@@ -16,35 +16,13 @@
           <li class="nav-item"><a class="nav-link" routerLink="/producers">Producers</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/genres"> Movie Genres</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/favorites">My Favorites <i class="bi bi-heart"></i></a>
-
-          
-          <!-- <li class="nav-item"><a class="nav-link" routerLink="/users">All Users</a></li> -->
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             -->
-              <!-- <li><a class="dropdown-item" routerLink="/add-movie" *ngIf="hasAddMoviePermission">Add Movie</a></li>
-              <li><a class="dropdown-item" routerLink="/add-actor" *ngIf="hasAddActorPermission">Add Actor</a></li>
-              <li><a class="dropdown-item" routerLink="/add-genre" *ngIf="hasAddGenrePermission">Add Genre</a></li> -->
-            <!-- </ul> -->
-            <!-- {% endif %} -->
-          <!-- </li> -->
-
         </ul>
         <form id="logoutForm" class="navbar-right" *ngIf="authenticated">
-          <!-- {% csrf_token %} -->
           <ul class="nav navbar-nav navbar-right">
             <li><span class="navbar-brand">{{himessage}}</span></li>
-            <li class="d-flex align-items-center"><a class="btn btn-primary "
-              (click)="logout()">Log Off</a></li>
+            <li class="d-flex align-items-center"><a class="btn btn-primary " (click)="logout()">Log Off</a></li>
           </ul>
-
         </form>
-
-
-        <!-- {% else %} -->
-
         <ul class="nav navbar-nav navbar-right" *ngIf="!authenticated">
           <a routerLink="/login" class="btn btn-outline-primary">Log In</a>
           <a routerLink="/register" class="btn btn-primary ms-2 ms-lg-3">Sign Up</a>
