--- a/MovieHubFrontend/src/app/components/register/register.component.html
+++ b/MovieHubFrontend/src/app/components/register/register.component.html
@@ -13,11 +13,13 @@
                         </div>
                         <div class="form-group mb-4 pb-2">
                             <label class="form-label">E-mail:</label>
-                            <input formControlName="email" type="email" class="form-control" placeholder="E-mail" required>
+                            <input formControlName="email" type="email" class="form-control" placeholder="E-mail"
+                                required>
                         </div>
                         <div class="form-group mb-4 pb-2">
                             <label class="form-label">Password:</label>
-                            <input formControlName="password" type="password" class="form-control" placeholder="Password:" required>
+                            <input formControlName="password" type="password" class="form-control"
+                                placeholder="Password:" required>
                         </div>
 
                         <!-- Add Select for Group -->
@@ -29,12 +31,12 @@
                                     {{ group.value }}
                                 </option>
                             </select>
-                            
+
                         </div>
 
                         <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Sign Up</button>
 
-                        <p class="mt-3">Already have an account? <a  routerLink="/login">Log in</a></p>
+                        <p class="mt-3">Already have an account? <a routerLink="/login">Log in</a></p>
                     </form>
                 </div>
             </div>
